RESOLVED FIXED14682
REGRESSION (24285-24399): alerts do not appear at W3C RTL test page
https://bugs.webkit.org/show_bug.cgi?id=14682
Summary REGRESSION (24285-24399): alerts do not appear at W3C RTL test page
Alexey Proskuryakov
Reported 2007-07-19 21:42:30 PDT
Steps to reproduce: 1) Open the bug URL 2) Click any of the "Click Me" buttons. Resuls: an alert doesn't appear; there's an error in JS Console: Object (result of expression alert) does not allow calls. http://www.w3.org/International/tests/test-rtl-chrome-1 Tested with nightly r24399.
Attachments
reduction (93 bytes, text/html)
2007-07-22 13:23 PDT, Alexey Proskuryakov
no flags
patch (3.76 KB, patch)
2007-07-22 22:17 PDT, Sam Weinig
darin: review+
David Kilzer (:ddkilzer)
Comment 1 2007-07-20 04:29:29 PDT
Works on Safari 2.0.4 (419.3) with original WebKit on Mac OS X 10.4.10 (8R218).
David Kilzer (:ddkilzer)
Comment 2 2007-07-20 04:30:54 PDT
Alexey Proskuryakov
Comment 3 2007-07-22 13:23:12 PDT
Created attachment 15626 [details] reduction
Alexey Proskuryakov
Comment 4 2007-07-22 13:40:19 PDT
mitz
Comment 5 2007-07-22 14:49:26 PDT
Probably r24350: fake getElementById properties now get priority over the autogenerated properties of the window prototype (see Window::getOwnPropertySlot)
Cameron Zwarich (cpst)
Comment 6 2007-07-22 19:22:20 PDT
(In reply to comment #4) > Two commits that look somewhat suspicious are > <http://trac.webkit.org/projects/webkit/changeset/24350> and > <http://trac.webkit.org/projects/webkit/changeset/24287>. I tried r24287 and the test passes, so it must be a later revision.
Sam Weinig
Comment 7 2007-07-22 22:17:50 PDT
Darin Adler
Comment 8 2007-07-22 22:22:36 PDT
Comment on attachment 15642 [details] patch r=me
Alexey Proskuryakov
Comment 9 2007-07-22 22:37:15 PDT
There's a mismatched closing tag here: + <div id="alert"></button>
Sam Weinig
Comment 10 2007-07-22 22:39:45 PDT
(In reply to comment #9) > There's a mismatched closing tag here: > > + <div id="alert"></button> > Eek, you're right. I will fix it.
Sam Weinig
Comment 11 2007-07-22 22:43:36 PDT
Landed in r24528.
Note You need to log in before you can comment on or make changes to this bug.