LayoutTests:

Reviewed by Darin.

        Test for  http://bugs.webkit.org/show_bug.cgi?id=14682
        REGRESSION(24285-24399): alerts do not appear at W3C RTL test page

        * fast/dom/Window/window-function-name-getter-precedence-expected.txt: Added.
        * fast/dom/Window/window-function-name-getter-precedence.html: Added.

WebCore:

        Reviewed by Darin.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=14682
        REGRESSION(24285-24399): alerts do not appear at W3C RTL test page

        Test: fast/dom/Window/window-function-name-getter-precedence.html

        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::customGetOwnPropertySlot): Make sure to return functions
        before the custom name getter.



Canonical link: https://commits.webkit.org/19170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24528 268f45cc-cd09-0410-ab3c-d52691b4dbfc